--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <!--  -->
     <load src="partials/how-it-works.html" />
     <!--  -->
-    <load src="partials/advertisemen" />
+    <load src="partials/advertisement.html" />
     <!--  -->
     <load src="partials/vegetables.html" />
     <!--  -->
