--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <!--  -->
     <load src="partials/vegetables.html" />
     <!--  -->
-    <load src="partials/rewiews.html" />
+    <load src="partials/reviews.html" />
     <!--  -->
     <load src="partials/your-order.html" />
     <!--  -->
