--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <meta
+      name="description"
+      content="Sites about fresh organic vegetables and them walue."
+    />
   </head>
   <body>
     <load src="partials/header.html" />
