--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
       name="description"
       content="Sites about fresh organic vegetables and them walue."
     />
+    <meta http-equiv="Cache-Control" content="max-age=31536000" />
   </head>
   <body>
     <load src="partials/header.html" />
